--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": ">=7.1",
+        "php": ">7.3|^8.0",
         "laravel/framework" : "^8.0|^9.0"
     },
     "require-dev": {
